--- a/loginPage.html
+++ b/loginPage.html
@@ -68,7 +68,7 @@
             <img class="login-img" src="./img/loginPage.svg" alt="" />
           </div>
           <div class="col-md-8 col-lg-6 offset-xl-1">
-            <form>
+            <form class="login-container">
               <div
                 class="
                   d-flex
