--- a/loginPage.html
+++ b/loginPage.html
@@ -67,7 +67,7 @@
           <div class="col-md-9 col-lg-6 col-xl-5 log-img-sec">
             <img class="login-img" src="./img/loginPage.svg" alt="" />
           </div>
-          <div class="col-md-8 col-lg-6 offset-xl-1">
+          <div class="col-md-8 col-lg-6 offset-xl-1 align-media">
             <form class="login-container">
               <div
                 class="
@@ -85,10 +85,10 @@
               <!-- Email input -->
               <div class="form-outline mb-4">
                 <div class="row">
-                  <div class="col-lg-1 space-up">
-                    <i class="fas fa-envelope"></i>
+                  <div class="col-lg-1 space-up ">
+                    <i class="fas fa-envelope "></i>
                   </div>
-                  <div class="col-lg-8">
+                  <div class="col-lg-8 ">
                     <input
                       type="email"
                       id="form3Example3"
@@ -100,12 +100,12 @@
               </div>
 
               <!-- Password input -->
-              <div class="form-outline mb-3 pass-spa">
-                <div class="row">
-                  <div class="col-lg-1 space-up">
-                    <i class="fas fa-unlock-alt"></i>
+              <div class="form-outline mb-3 pass-spa ">
+                <div class="row ">
+                  <div class="col-lg-1 space-up ">
+                    <i class="fas fa-unlock-alt "></i>
                   </div>
-                  <div class="col-lg-8">
+                  <div class="col-lg-8 ">
                     <input
                       type="password"
                       id="form3Example4"
