--- a/Register.html
+++ b/Register.html
@@ -67,8 +67,8 @@
           <div class="col-md-9 col-lg-6 col-xl-5 log-img-sec">
             <img class="register-img" src="./img/Create_account.svg" alt="" />
           </div>
-            <div class="col-md-8 col-lg-6 offset-xl-1 align-media">
-              <div class="card card-registration card-registration-2">
+            <div class="col-md-8 col-lg-6 offset-xl-1 align-media align-image">
+              <div class="card card-style  w-80">
                   <div class="card-body p-0">
             
             <form class="login-container">
@@ -81,11 +81,30 @@
                 "
               >
                 <p class="lead fw-normal mb-0 me-3 login-mess">
-                  <b> Welcome </b>
+                  <b> Create Account </b>
                 </p>
               </div>
 
-              <!-- Email input -->
+              <!-- Name input -->
+
+              <div class="form-outline mb-3 pass-spa ">
+                <div class="row ">
+                  <div class="col-lg-1 space-up ">
+                    <i class="fas fa-user"></i>
+                  </div>
+                  <div class="col-lg-8 ">
+                    <input
+                      type="text"
+                      id="form3Example4"
+                      class="form-control form-control-lg"
+                      placeholder="Enter your name"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <!--Email Input-->
+
               <div class="form-outline mb-4">
                 <div class="row">
                   <div class="col-lg-1 space-up ">
@@ -101,6 +120,24 @@
                   </div>
                 </div>
               </div>
+
+              <!--Phone Input-->
+              <div class="form-outline mb-3 pass-spa ">
+                <div class="row ">
+                  <div class="col-lg-1 space-up ">
+                    <i class="fas fa-phone-alt"></i>
+                  </div>
+                  <div class="col-lg-8 ">
+                    <input
+                      type="number"
+                      id="form3Example4"
+                      class="form-control form-control-lg"
+                      placeholder="Enter your number"
+                    />
+                  </div>
+                </div>
+              </div>
+
 
               <!-- Password input -->
               <div class="form-outline mb-3 pass-spa ">
@@ -118,19 +155,8 @@
                   </div>
                 </div>
               </div>
+              
               <div class="text-center text-lg-start button-tab">
-                <button
-                  type="button"
-                  class="btn btn-outline-success btn-lg btn-login"
-                  style="padding-left: 2.5rem; padding-right: 2.5rem"
-                >
-                  <b class="bold-size">Sign in</b>
-                </button>
-                <div class="d-flex justify-content-between align-items-center">
-                  <!-- Checkbox -->
-
-                  <a href="#!" class="text-body pass-centre">Forgot password?</a>
-                </div>
                 <button
                 type="button"
                 class="btn btn-success btn-lg btn-register"
@@ -138,6 +164,12 @@
               >
                 <b class="bold-size">Create Account</b>
               </button>
+              <div class="d-flex justify-content-between align-items-center">
+                <!-- Checkbox -->
+
+                <a href="#!" class="text-body pass-centre pass-color-acc">Already have an account?</a>
+                <a href="#" class="pass-centre pass-color" > <b>Sign In</b> </a>
+              </div>
               </div>
             </form>
         </div>
