--- a/Register.html
+++ b/Register.html
@@ -68,7 +68,7 @@
             <img class="register-img" src="./img/Create_account.svg" alt="" />
           </div>
             <div class="col-md-8 col-lg-6 offset-xl-1 align-media align-image">
-              <div class="card card-style  w-80">
+              <div class="card card-style w-80 width-mob">
                   <div class="card-body p-0">
             
             <form class="login-container">
@@ -156,10 +156,10 @@
                 </div>
               </div>
               
-              <div class="text-center text-lg-start button-tab">
+              <div class="text-center text-lg-start button-tab tab-mob">
                 <button
                 type="button"
-                class="btn btn-success btn-lg btn-register"
+                class="btn btn-success btn-lg btn-register btn-mob"
                 style="padding-left: 2.5rem; padding-right: 2.5rem"
               >
                 <b class="bold-size">Create Account</b>
