--- a/loginPage.html
+++ b/loginPage.html
@@ -88,24 +88,25 @@
                   <div class="col-lg-1 space-up ">
                     <i class="fas fa-envelope "></i>
                   </div>
-                  <div class="col-lg-8 ">
+                  <div class="col-lg-8 space-left">
                     <input
                       type="email"
                       id="form3Example3"
                       class="form-control form-control-lg"
                       placeholder="Enter a valid email address"
                     />
+                    
                   </div>
                 </div>
               </div>
 
               <!-- Password input -->
               <div class="form-outline mb-3 pass-spa ">
-                <div class="row ">
+                <div class="row row-class">
                   <div class="col-lg-1 space-up ">
                     <i class="fas fa-unlock-alt "></i>
                   </div>
-                  <div class="col-lg-8 ">
+                  <div class="col-lg-8 space-left">
                     <input
                       type="password"
                       id="form3Example4"
