--- a/Register.html
+++ b/Register.html
@@ -69,7 +69,7 @@
           </div>
             <div class="col-md-8 col-lg-6 offset-xl-1 align-media align-image">
               <div class="card card-style w-80 width-mob">
-                  <div class="card-body p-0">
+                  <div class="card-body p-0 card-align">
             
             <form class="login-container">
               <div
@@ -88,11 +88,11 @@
               <!-- Name input -->
 
               <div class="form-outline mb-3 pass-spa ">
-                <div class="row ">
+                <div class="row row-class">
                   <div class="col-lg-1 space-up ">
                     <i class="fas fa-user"></i>
                   </div>
-                  <div class="col-lg-8 ">
+                  <div class="col-lg-8  space-left">
                     <input
                       type="text"
                       id="form3Example4"
@@ -106,11 +106,11 @@
               <!--Email Input-->
 
               <div class="form-outline mb-4">
-                <div class="row">
+                <div class="row row-class">
                   <div class="col-lg-1 space-up ">
                     <i class="fas fa-envelope "></i>
                   </div>
-                  <div class="col-lg-8 ">
+                  <div class="col-lg-8  space-left">
                     <input
                       type="email"
                       id="form3Example3"
@@ -123,11 +123,11 @@
 
               <!--Phone Input-->
               <div class="form-outline mb-3 pass-spa ">
-                <div class="row ">
+                <div class="row row-class">
                   <div class="col-lg-1 space-up ">
                     <i class="fas fa-phone-alt"></i>
                   </div>
-                  <div class="col-lg-8 ">
+                  <div class="col-lg-8  space-left">
                     <input
                       type="number"
                       id="form3Example4"
@@ -141,11 +141,11 @@
 
               <!-- Password input -->
               <div class="form-outline mb-3 pass-spa ">
-                <div class="row ">
+                <div class="row row-class">
                   <div class="col-lg-1 space-up ">
                     <i class="fas fa-unlock-alt "></i>
                   </div>
-                  <div class="col-lg-8 ">
+                  <div class="col-lg-8  space-left">
                     <input
                       type="password"
                       id="form3Example4"
