--- a/loginPage.html
+++ b/loginPage.html
@@ -84,7 +84,7 @@
 
               <!-- Email input -->
               <div class="form-outline mb-4">
-                <div class="row">
+                <div class="row row-class">
                   <div class="col-lg-1 space-up ">
                     <i class="fas fa-envelope "></i>
                   </div>
