--- a/Register.html
+++ b/Register.html
@@ -65,7 +65,7 @@
       <div class="container-fluid">
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col-md-9 col-lg-6 col-xl-5 log-img-sec">
-            <img class="register-img" src="./img/Create_account.svg" alt="" />
+            <img class="register-img" src="./img/Register Page.jpg" alt="" />
           </div>
             <div class="col-md-8 col-lg-6 offset-xl-1 align-media align-image">
               <div class="card card-style w-80 width-mob">
@@ -96,7 +96,7 @@
                     <input
                       type="text"
                       id="form3Example4"
-                      class="form-control form-control-lg"
+                      class="form-control form-control-lg form-text"
                       placeholder="Enter your name"
                     />
                   </div>
@@ -114,7 +114,7 @@
                     <input
                       type="email"
                       id="form3Example3"
-                      class="form-control form-control-lg"
+                      class="form-control form-control-lg form-text"
                       placeholder="Enter a valid email address"
                     />
                   </div>
@@ -131,7 +131,7 @@
                     <input
                       type="number"
                       id="form3Example4"
-                      class="form-control form-control-lg"
+                      class="form-control form-control-lg form-text"
                       placeholder="Enter your number"
                     />
                   </div>
@@ -149,7 +149,7 @@
                     <input
                       type="password"
                       id="form3Example4"
-                      class="form-control form-control-lg"
+                      class="form-control form-control-lg form-text"
                       placeholder="Enter password"
                     />
                   </div>
