--- a/loginPage.html
+++ b/loginPage.html
@@ -65,7 +65,7 @@
       <div class="container-fluid">
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col-md-9 col-lg-6 col-xl-5 log-img-sec">
-            <img class="login-img" src="./img/loginPage.svg" alt="" />
+            <img class="login-img" src="./img/Login.jpg" alt="" />
           </div>
           <div class="col-md-8 col-lg-6 offset-xl-1 align-media">
             <form class="login-container">
