--- a/Register.html
+++ b/Register.html
@@ -77,7 +77,7 @@
                   d-flex
                   flex-row
                   align-items-center
-                  justify-content-center justify-content-lg-start
+                  justify-content-center justify-content-lg-start mob-top-pad
                 "
               >
                 <p class="lead fw-normal mb-0 me-3 login-mess">
