--- a/desktop-5.html
+++ b/desktop-5.html
@@ -67,6 +67,7 @@
 
   <body>
     
+    <!--Navbar-->
     <nav class="navbar navbar-inverse navbar-dark navbar-static-top nav-back-style">
       <button class="navbar-toggler nav-link dropdown-toggle nav-button-mob" data-toggle="dropdown" type="button" id="dropdownMenuButton">
         <span class="navbar-toggler-icon"></span>
@@ -130,7 +131,7 @@
 
 
     <!--Carousel-->
-    <div class="container-fluid container-spaced">
+    <div id="ongoingHacks" class="container-fluid container-spaced">
     <div class= " row mt-4 ">
     <div id="demo" class="carousel slide" data-ride="carousel" >
       <ul class="carousel-indicators">
