--- a/desktop-6.html
+++ b/desktop-6.html
@@ -132,7 +132,7 @@
         <div class="split left">
             <ul class="li-item">
                 <li class="li-split"> <i class="fas fa-info-circle li-pad"></i>About</li>
-                <li class="li-split"> <img class="li-pad-img" src="./img/return.svg" alt=""> Return Policy</li>
+                <li class="li-split"> <i class="fas fa-undo-alt li-pad"></i> Return Policy</li>
                 <li class="li-split"><i class="fas fa-star li-pad"></i>Reviews</li>
             </ul>
             <br>
