--- a/desktop-6.html
+++ b/desktop-6.html
@@ -165,9 +165,9 @@
                 <button
                 type="button"
                 class="btn btn-success btn-lg btn-register btn-mob"
-                style="padding-left: 2.5rem; padding-right: 2.5rem"
+                style="padding-left: 4 rem; padding-right: 3 rem"
               >
-                <b class="bold-size">Call</b>
+                <b class="bold-size"><i class="fas fa-phone-alt fa-space"></i>Call</b>
               </button>
 
               <button
@@ -175,7 +175,7 @@
                 class="btn btn-success btn-lg btn-register btn-mob-sec"
                 style="padding-left: 2.5rem; padding-right: 2.5rem"
               >
-                <b class="bold-size">Message</b>
+                <b class="bold-size"><i class="far fa-paper-plane fa-space"></i>Message</b>
               </button>
             </div>
               
