--- a/desktop-6.html
+++ b/desktop-6.html
@@ -127,9 +127,9 @@
       </nav>
 
       <!-- Page split left-->
-      <div class="container-fluid">
+      <div class="container-fluid split-left">
 
-        <div class="split left">
+        <div class="split left ">
             <ul class="li-item">
                 <li class="li-split"> <i class="fas fa-info-circle li-pad"></i>About</li>
                 <li class="li-split"> <i class="fas fa-undo-alt li-pad"></i> Return Policy</li>
@@ -147,7 +147,7 @@
       </div>
 
              <!-- Page split right-->
-              <div class="split right">
+              <div class="split right split-right">
                 <div class="container-fluid fluid-prop">
                   <img class="container-img" src="./img/desktop-6 main.jpg" alt="">
                 </div>
@@ -173,7 +173,7 @@
               <button
                 type="button"
                 class="btn btn-success btn-lg btn-register btn-mob-sec"
-                style="padding-left: 2.5rem; padding-right: 2.5rem"
+                style="padding-left: 4 rem; padding-right: 3 rem"
               >
                 <b class="bold-size"><i class="far fa-paper-plane fa-space"></i>Message</b>
               </button>
