--- a/desktop-6.html
+++ b/desktop-6.html
@@ -153,11 +153,19 @@
                 </div>
                
                 <div class="card-pos">
-                <div class="card" style="width: 10rem;"> 
+                <div class="card card-mob" style="width: 10rem;"> 
                   <img class="card-img-top" src="./img/desktop-6 profile.png" alt="Card image cap">
                 </div>
-                <h3>Lifestyle Fashion</h3>
-                <h6>CP, New Delhi</h6>
+                <h3 class="mob-head">Lifestyle Fashion</h3>
+                <h6 style="width: 100px">CP, New Delhi</h6>
+              </div>
+
+              <div class="mob-list-display">
+                <ul class="li-item">
+                  <li class="li-split"> <i class="fas fa-info-circle li-pad"></i>About</li>
+                  <li class="li-split"> <i class="fas fa-undo-alt li-pad"></i> Return Policy</li>
+                  <li class="li-split"><i class="fas fa-star li-pad"></i>Reviews</li>
+              </ul>
               </div>
               <div class="row row-pos">
                
