--- a/Allshoplist.html
+++ b/Allshoplist.html
@@ -16,7 +16,7 @@
     <!-- FONTAWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <!-- page css -->
-    <link href="./extra/screen5style.css" rel="stylesheet" >
+    <link href="./extra/Allshoplist.css" rel="stylesheet" >
     <!-- Carousel CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
     <link
