--- a/Specific Shop.html
+++ b/Specific Shop.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Basic</title>
+    <title>Specific Shop</title>
     <meta
       name="have-i-been-pwned-verification"
       value="7e8033561b1da752725ca93d9cebf1a2"
@@ -19,7 +19,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     />
     <!-- page css -->
-     <link href="extra/desktop-6.css" rel="stylesheet" >
+     <link href="extra/Specific Shop.css" rel="stylesheet" >
     <!-- Carousel CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
     <link
