--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     />
     <!-- page css -->
-    <link href="extra/desktop-5.css" rel="stylesheet" >
+    <link href="extra/home.css" rel="stylesheet" >
     
     <!-- Carousel CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" >
