--- a/My Profile.html
+++ b/My Profile.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>Basic</title>
+  <title>My Profile</title>
   <meta name="have-i-been-pwned-verification" value="7e8033561b1da752725ca93d9cebf1a2" />
   <!-- Favicon -->
   <link rel="shortcut icon" href="/final/images/logo/favicon.png" />
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- page css -->
-  <link rel="stylesheet" href="./extra/desktop-9.css">
+  <link rel="stylesheet" href="./extra/My Profile.css">
   <!-- Carousel CSS -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
