--- a/Allshoplist.html
+++ b/Allshoplist.html
@@ -61,6 +61,7 @@
   </head>
 
   <body>
+    <!--Nav Section-->
     <nav class="navbar navbar-inverse navbar-dark navbar-static-top nav-back-style">
       <button class="navbar-toggler nav-link dropdown-toggle nav-button-mob" data-toggle="dropdown" type="button" id="dropdownMenuButton">
         <span class="navbar-toggler-icon"></span>
