--- a/Buyer/Specific Shop.html
+++ b/Buyer/Specific Shop.html
@@ -206,6 +206,18 @@
             </div>
               
               </div>
+
+              <div class="container">
+                <div class="pt-3 align-left mt-2">
+                  <h3>56 Products</h3>
+                </div>
+                <div class="row">
+                  <div class="col-6">
+                    <img src="./img/" alt="">
+                  </div>
+
+                </div>
+              </div>
      
 
     <!-- Core Vendors JS -->
