--- a/Buyer/Specific Shop.html
+++ b/Buyer/Specific Shop.html
@@ -152,10 +152,10 @@
                   <img class="container-img" src="./img/desktop-6 main.jpg" alt="">
                 </div>
                
-                <div class="card-pos">
-                <div class="card card-mob" style="width: 10rem;"> 
+          <div class="card-pos">
+            <div class="card card-mob" style="width: 10rem;"> 
                   <img class="card-img-top" src="./img/desktop-6 profile.png" alt="Card image cap">
-                </div>
+              </div>
                 <h3 class="mob-head">Lifestyle Fashion</h3>
                 <h6 class="mb-3" style="width: 100px">CP, New Delhi</h6>
                 <div class="extra-visible-mob">
@@ -207,13 +207,35 @@
               
               </div>
 
-              <div class="container">
+              </div>
+              <div class="container extra-desk-prop">
                 <div class="pt-3 align-left mt-2">
                   <h3>56 Products</h3>
                 </div>
                 <div class="row">
-                  <div class="col-6">
-                    <img src="./img/" alt="">
+                  <div class="col-6 col-lg-3 col-md-3">
+                    <img src="./img/Rectangle 3.jpg" alt="">
+                    <h6 class="pt-1 pb-1">Light Blue T-Shirt</h6>
+                    <h4><span class="font-weight-bold">$199</span><span class="text-secondary"> 249</span></h4>
+                    <h5 class="pt-1 pb-2"><i class="fas fa-star text-success"></i> 4.9</h5>
+                  </div>
+                  <div class="col-6 col-lg-3 col-md-3">
+                    <img src="./img/jason-leung-EtOMMg1nSR8-unsplash 1.jpg" alt="">
+                    <h6 class="pt-1 pb-1">Light Blue Jeans</h6>
+                    <h4><span class="font-weight-bold">$199</span><span class="text-secondary"> 249</span></h4>
+                    <h5 class="pt-1 pb-2"><i class="fas fa-star text-success"></i> 4.9</h5>
+                  </div>
+                  <div class="col-6 col-lg-3 col-md-3">
+                    <img src="./img/Rectangle 3.jpg" alt="">
+                    <h6 class="pt-1 pb-1">Light Blue T-Shirt</h6>
+                    <h4><span class="font-weight-bold">$199</span><span class="text-secondary"> 249</span></h4>
+                    <h5 class="pt-1 pb-2"><i class="fas fa-star text-success"></i> 4.9</h5>
+                  </div>
+                  <div class="col-6 col-lg-3 col-md-3">
+                    <img src="./img/jason-leung-EtOMMg1nSR8-unsplash 1.jpg" alt="">
+                    <h6 class="pt-1 pb-1">Light Blue Jeans</h6>
+                    <h4><span class="font-weight-bold">$199</span><span class="text-secondary"> 249</span></h4>
+                    <h5 class="pt-1 pb-2"><i class="fas fa-star text-success"></i> 4.9</h5>
                   </div>
 
                 </div>
