--- a/Buyer/My Profile.html
+++ b/Buyer/My Profile.html
@@ -43,15 +43,18 @@
 <body>
 
   <!--Navbar-->
-  <nav class="navbar navbar-inverse navbar-dark navbar-static-top extra-nav-back-style">
-    <button class="navbar-toggler nav-link dropdown-toggle nav-button-mob" data-toggle="dropdown" type="button"
-      id="dropdownMenuButton">
-      <span class="navbar-toggler-icon"></span>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Link</a>
-        <a class="dropdown-item" href="#">Link</a>
-      </div>
-    </button>
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">Clients</a>
+      <a href="#">Contact</a>
+    </div>
+  <nav class="navbar navbar-inverse navbar-dark navbar-static-top nav-back-style extra-nav-back-style">
+      <button class="navbar-toggler nav-link dropdown-toggle nav-button-mob" data-toggle="dropdown" type="button" onclick="openNav()" >
+        <span>&#9776;</span>
+      </button>
+
 
     <div>
       <i class="fas fa-map-marker-alt fa-color-front-loc fa-color-front fa-2x"></i>
@@ -150,6 +153,7 @@
  <!-- fontAwesome -->
  <script src="https://kit.fontawesome.com/yourcode.js"></script>
   <!-- page js -->
+  <script src="./js/index.js"></script>
   <!-- Carousel JS -->
   <script src="https://unpkg.com/swiper/swiper-bundle.js" defer></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
