--- a/Buyer/Specific Shop.html
+++ b/Buyer/Specific Shop.html
@@ -73,7 +73,7 @@
         <a href="#">Contact</a>
       </div>
     <nav class="navbar navbar-inverse navbar-dark navbar-static-top nav-back-style">
-        <button class="navbar-toggler nav-link dropdown-toggle nav-button-mob" data-toggle="dropdown" type="button" onclick="openNav()" >
+        <button class="navbar-toggler nav-button-mob" style = "border: none;" data-toggle="dropdown" type="button" onclick="openNav()" >
           <span>&#9776;</span>
         </button>
   
