--- a/Buyer/Allshoplist.html
+++ b/Buyer/Allshoplist.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Screen 5</title>
+    <title>All Shop List</title>
     <meta
       name="have-i-been-pwned-verification"
       value="7e8033561b1da752725ca93d9cebf1a2"
@@ -70,7 +70,7 @@
       <a href="#">Contact</a>
     </div>
   <nav class="navbar navbar-inverse navbar-dark navbar-static-top nav-back-style">
-      <button class="navbar-toggler nav-link dropdown-toggle nav-button-mob" data-toggle="dropdown" type="button" onclick="openNav()" >
+      <button class="navbar-toggler nav-button-mob" style = "border: none;" data-toggle="dropdown" type="button" onclick="openNav()" >
         <span>&#9776;</span>
       </button>
 
