--- a/Buyer/Mycart.html
+++ b/Buyer/Mycart.html
@@ -65,13 +65,16 @@
 
   <body>
     <!--Nav Section-->
-    <nav class="navbar navbar-inverse navbar-dark navbar-static-top nav-back-style nav-hide">
-      <button class="navbar-toggler nav-link dropdown-toggle nav-button-mob" data-toggle="dropdown" type="button" id="dropdownMenuButton">
-        <span class="navbar-toggler-icon"></span>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Link</a>
-          <a class="dropdown-item" href="#">Link</a>
-        </div>
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">Clients</a>
+      <a href="#">Contact</a>
+    </div>
+  <nav class="navbar navbar-inverse navbar-dark navbar-static-top nav-back-style">
+      <button class="navbar-toggler nav-button-mob" style = "border: none;" data-toggle="dropdown" type="button" onclick="openNav()" >
+        <span>&#9776;</span>
       </button>
 
       <div>
