--- a/Buyer/Specific Product.html
+++ b/Buyer/Specific Product.html
@@ -145,23 +145,34 @@
         <hr class="mt-4 mb-4">
 
         <div class="d-flex justify-content-between">
-          <h5 class="font-weight mb-2"><i class="fas fa-shopping-bag text-secondary pr-3"></i>Product Details </h5>
-          <i class="fas fa-chevron-down d-md-none"></i>
+          <h5 class="font-weight mb-2"><a class="extra-toggle-collapse" data-toggle="collapse" href="#collapse2" ><i class="fas fa-shopping-bag text-secondary pr-3"></i>Product Details </a></h5>
+          <a class="extra-toggle-collapse" data-toggle="collapse" href="#collapse2" ><i class="fas fa-chevron-down align-right"></i></a>
+        </div>
+        <div id="collapse2" class="panel-collapse collapse">
+          <p>Loreum ipsum Loreum hshs shvhhsu hsvysx </p>
+        </div>
+
+
+        <hr class="mt-4 mb-4">
+
+        <div class="d-flex justify-content-between">
+          <h5 class="font-weight"> <a class="extra-toggle-collapse" data-toggle="collapse" href="#collapse1" ><i class="fas fa-undo-alt text-secondary pr-3"></i>10 Days Return Policy</a></h5>
+          <a class="extra-toggle-collapse" data-toggle="collapse" href="#collapse1" ><i class="fas fa-chevron-down align-right"></i></a>
+        </div>
+        <div id="collapse1" class="panel-collapse collapse">
+          <p>Loreum ipsum Loreum hshs shvhhsu hsvysx </p>
         </div>
 
         <hr class="mt-4 mb-4">
 
         <div class="d-flex justify-content-between">
-          <h5 class="font-weight"><i class="fas fa-undo-alt text-secondary pr-3"></i>10 Days Return Policy</h5>
-          <i class="fas fa-chevron-down d-md-none"></i>
+          <h5 class="font-weight"><a class="extra-toggle-collapse" data-toggle="collapse" href="#collapse3" ><i class="fas fa-truck text-secondary pr-3"></i>Shipping Information</a></h5>
+          <a class="extra-toggle-collapse" data-toggle="collapse" href="#collapse3" ><i class="fas fa-chevron-down"></i></a> 
+        </div>
+        <div id="collapse3" class="panel-collapse collapse">
+          <p>Loreum ipsum Loreum hshs shvhhsu hsvysx </p>
         </div>
 
-        <hr class="mt-4 mb-4">
-
-        <div class="d-flex justify-content-between">
-          <h5 class="font-weight"><i class="fas fa-truck text-secondary pr-3"></i>Shipping Information</h5><i
-            class="fas fa-chevron-down d-md-none"></i>
-        </div>
 
         <hr class="mt-4 mb-4">
 
