--- a/Buyer/Specific Product.html
+++ b/Buyer/Specific Product.html
@@ -191,7 +191,7 @@
 
         </div>
         <br>
-        <div class="d-md-none">
+        <div class="extra-desk-review">
           <h5 class="pt-1 pb-2"><i class="fas fa-star text-success"></i> 4.5</h5>
           <h5><span class="font-weight-bold">Very Nice</span>
             <br>
@@ -210,9 +210,7 @@
           <hr>
         </div>
       </div>
-
-
-    </div>
+      
   </section>
 
   <!-- Core Vendors JS -->
