--- a/Buyer/Specific Shop.html
+++ b/Buyer/Specific Shop.html
@@ -78,7 +78,7 @@
         </button>
   
         <div>
-          <i class="fas fa-map-marker-alt fa-color-front-loc fa-color-front fa-2x"></i>
+          <button style="border: none; background: transparent;"><i class="fas fa-map-marker-alt fa-color-front-loc fa-color-front-mob fa-2x"></i></button>
           <span class="navbar-text mob-color" id="heading">
             <b>New Delhi,India</b> 
           </span>
