--- a/Buyer/specficiOrder.html
+++ b/Buyer/specficiOrder.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Specific Shop</title>
+    <title>Specific Order</title>
     <meta
       name="have-i-been-pwned-verification"
       value="7e8033561b1da752725ca93d9cebf1a2"
@@ -19,7 +19,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     />
     <!-- page css -->
-    <link rel="stylesheet" href="./extra/specificproduct.css">
+    <link rel="stylesheet" href="./extra/specificorder.css">
     <!-- Carousel CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
     <link
@@ -80,7 +80,7 @@
 
 
       <div>
-        <i class="fas fa-map-marker-alt fa-color-front-loc fa-color-front fa-2x"></i>
+        <button style="border: none; background: transparent;"><i class="fas fa-map-marker-alt fa-color-front-loc fa-color-front-mob fa-2x"></i></button>
         <span class="navbar-text mob-color" id="heading">
           <b>New Delhi,India</b> 
         </span>
