--- a/Seller/Invoicing.html
+++ b/Seller/Invoicing.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Register</title>
+    <title>Invoicing</title>
     <meta
       name="have-i-been-pwned-verification"
       value="7e8033561b1da752725ca93d9cebf1a2"
@@ -80,9 +80,9 @@
           <img src="./img/WhatsApp Image 2021-09-10 at 12.15.14 AM.jpeg" alt="">
         </div>
         <div>
-          <h6>Apple iphone 12</h6>
+          <h6 class="mb-0">Apple iphone 12</h6>
           <span class="d-block">$69</span>
-          <span class="d-block">Red</span>
+          <span class="d-block mb-3">Red</span>
           <div class="d-flex">
             <p class="mr-3"><i class="fas fa-minus-circle"></i></p>
             <p>1</p>
@@ -95,9 +95,9 @@
         <img src="./img/WhatsApp Image 2021-09-10 at 12.15.14 AM.jpeg" alt="">
       </div>
       <div>
-        <h6>Apple iphone 12</h6>
+        <h6 class="mb-0">Apple iphone 12</h6>
         <span class="d-block">$69</span>
-        <span class="d-block">Red</span>
+        <span class="d-block mb-3">Red</span>
         <div class="d-flex">
           <p class="mr-3"><i class="fas fa-minus-circle"></i> </p>
           <p>1</p>
@@ -110,9 +110,9 @@
          <img src="./img/WhatsApp Image 2021-09-10 at 12.15.14 AM.jpeg" alt="">
        </div>
        <div>
-         <h6>Apple iphone 12</h6>
+         <h6 class="mb-0">Apple iphone 12</h6>
          <span class="d-block">$69</span>
-         <span class="d-block">Red</span>
+         <span class="d-block mb-3">Red</span>
          <div class="d-flex">
            <p class="mr-3"><i class="fas fa-minus-circle"></i></p>
            <p>1</p>
