--- a/Seller/Staff.html
+++ b/Seller/Staff.html
@@ -4,20 +4,21 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Extra Charges</title>
+    <title>Staff</title>
     <meta name="have-i-been-pwned-verification" value="7e8033561b1da752725ca93d9cebf1a2" />
     <!-- Favicon -->
     <link rel="shortcut icon" href="/final/images/logo/favicon.png" />
     <!-- FONTAWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <!-- page css -->
-    <link href="./extra/extracharges.css" rel="stylesheet">
+    <link href="./extra/Staff.css" rel="stylesheet">
     <!-- Carousel CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <!-- Core css -->
     <link href="./css/app.min.css" rel="stylesheet" />
     <link href="./css/main.css" rel="stylesheet" />
+    <link href="./css/staff.css" rel="stylesheet" />
     <!-- Bootstrap  CSS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
     <!--Bootstrap JS-->
@@ -33,7 +34,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -43,15 +43,16 @@
 </head>
 
 <body>
+
     <!-- mycode start -->
-    <div class="container-fluid">
+    <div class="container-fluid p-50">
 
         <div>
-            <nav class="navbar navbar-light bg-white">
+            <nav class="navbar navbar-light bg-white ">
                 <div class="container-fluid bg-white">
                     <div class="card border-0" style=" width: 24rem; ">
                         <div class="card-body h3 p-1">
-                            Manage extra charges
+                            Manage Staff
                         </div>
 
 
@@ -69,14 +70,14 @@
                     </div>
             </nav>
             </div>
-            <div class="px-4 my-4 ">
-                <div class="card " style=" width: 18rem; ">
+            <div class="px-4 my-4">
+                <div class="card shadow" style=" width: 18rem; ">
                     <div class="card-body pt-3 pb-2 h6 ">
 
-                        Packing Charge <i class="fa fa-trash float-right "></i></div>
+                        Daljeetsingh86 <span class="text-success">( Staff )</span><i class="fa fa-trash float-right "></i></div>
 
                     <div class="card-body pb-3 pt-2 h6 ">
-                        $ 50
+                        nqba121212
                         <i class="fa fa-pencil float-right "></i>
 
                     </div>
@@ -84,20 +85,21 @@
 
 
             </div>
+            <div class="p-4">
 
-            <div type="button" class="btn float-right mb-2 rounded-circle" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><i class="fa fa-plus rounded-circle bg-success p-3 text-white"></i></div>
-
+                <div type="button" class="btn btn-white btn-outline-white  float-right m-0 p-0 rounded-circle" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><i class="fa fa-plus rounded-circle bg-success p-3 text-white"></i></div>
+            </div>
             <!-- Button trigger modal -->
 
 
             <!-- Modal -->
-            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal fade shadow" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="staticBackdropLabel">
                                 <div class="card-body h3 p-1">
-                                    Manage extra charges
+                                    Staff Info
                                 </div>
                             </h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">X</button>
@@ -105,29 +107,29 @@
                         <div class="modal-body p-0 m-0">
                             <div class=" card mx-auto shadow" style="width: 75%; ">
                                 <div class="card-body ">
-                                    <h1 class="card-title ">Add Charges</h1>
+                                    <h1 class="card-title h4">Add Staff</h1>
 
                                     <h6 class="card-subtitle text-muted row ">
 
-                                        <div class="form-check mx-2">
-                                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
+                                        <div class="form-check ml-4 mb-2">
+                                            <input class="form-check-input " type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
                                             <label class="form-check-label" for="flexRadioDefault1">
-                                          Flat
+                                          Staff
                                         </label>
                                         </div>
                                         <div class="form-check mx-auto">
                                             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
                                             <label class="form-check-label" for="flexRadioDefault2">
-                                          Percentage
+                                          Manager
                                         </label>
                                         </div>
                                     </h6>
 
                                     <div class="form-floating mb-3 ">
-                                        <input type="email " class="form-control border-top-0 border-left-0 border-right-0 " id="floatingInput " placeholder="Enter Name ">
+                                        <input type="email " class="form-control border-top-0 border-left-0 border-right-0 h3" id="floatingInput " placeholder="Username">
                                     </div>
                                     <div class="form-floating ">
-                                        <input type="number " class="form-control border-top-0 border-left-0 border-right-0 " id="floatingRate " placeholder="Enter Rate ">
+                                        <input type="Password" class="form-control border-top-0 border-left-0 border-right-0 h3" id="floatingRate " placeholder="Password ">
                                     </div>
                                 </div>
                             </div>
@@ -144,21 +146,15 @@
         <!-- mycode end -->
 
         <!-- Core Vendors JS -->
-        <script src="./js/vendors.min.js " defer></script>
+        <script src="./js/vendors.min.js" defer></script>
 
         <!-- page js -->
         <!-- Carousel JS -->
-        <script src="https://unpkg.com/swiper/swiper-bundle.js " defer></script>
-        <script src="https://unpkg.com/swiper/swiper-bundle.min.js "></script>
+        <script src="https://unpkg.com/swiper/swiper-bundle.js" defer></script>
+        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
         <!-- Core JS -->
-        <script src="./js/app.min.js "></script>
-        <script>
-            var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover "]'))
-            var popoverList = popoverTriggerList.map(function(popoverTriggerEl) {
-                return new bootstrap.Popover(popoverTriggerEl)
-            })
-        </script>
+        <script src="./js/app.min.js"></script>
 
         <!-- Facebook Pixel Code -->
         <script>
@@ -172,7 +168,7 @@
                 if (!f._fbq) f._fbq = n;
                 n.push = n;
                 n.loaded = !0;
-                n.version = "2.0 ";
+                n.version = "2.0";
                 n.queue = [];
                 t = b.createElement(e);
                 t.async = !0;
@@ -182,19 +178,23 @@
             })(
                 window,
                 document,
-                "script ",
-                "https://connect.facebook.net/en_US/fbevents.js "
+                "script",
+                "https://connect.facebook.net/en_US/fbevents.js"
             );
-            fbq("init ", "497776030646488 ");
-            fbq("track ", "PageView ");
+            fbq("init", "497776030646488");
+            fbq("track", "PageView");
         </script>
         <noscript>
-    <img height="1 " width="1 " src="https://www.facebook.com/tr?id=497776030646488&ev=PageView &noscript=1 " />
+    <img height="1" width="1" src="https://www.facebook.com/tr?id=497776030646488&ev=PageView
+        &noscript=1" />
   </noscript>
-        <script src="./js/lazyloading.min.js " async></script>
+        <script src="./js/lazyloading.min.js" async></script>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js " integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ " crossorigin="anonymous "></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js " integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN " crossorigin="anonymous "></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js " integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/ " crossorigin="anonymous "></script>
+
+
 </body>
 
 </html>
