--- a/Seller/Pending Order.html
+++ b/Seller/Pending Order.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>Pending Orders</title>
+  <title>Extra Charges</title>
   <meta name="have-i-been-pwned-verification" value="7e8033561b1da752725ca93d9cebf1a2" />
   <!-- Favicon -->
   <link rel="shortcut icon" href="/final/images/logo/favicon.png" />
@@ -59,7 +59,7 @@
             </tr>
           </table>
         </div>
-        <div class="Button container " id="div1-2">
+        <div class="Button container" id="div1-2">
           <table>
             <tr>
               <td class="btn1"><button type="button" class="btn btn-success btn-lg">Accept</button></td>
