--- a/Seller/Cutomers.html
+++ b/Seller/Cutomers.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>Extra Charges</title>
+  <title>Customers</title>
   <meta name="have-i-been-pwned-verification" value="7e8033561b1da752725ca93d9cebf1a2" />
   <!-- Favicon -->
   <link rel="shortcut icon" href="/final/images/logo/favicon.png" />
